templates/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: mario-direct 
  namespace: infra-openshift 
spec: 
  ports: 
  - port: 80 
    targetPort: 80 
    protocol: TCP 
  selector: 
    app: mario-direct
